MDEV-8224 Server crashes in get_server_from_table_to_cache on empty name